# vectormatrix

./: Cargo.toml  LICENSE-MIT.md  NOTICE  README.md
.github/workflows/: ci.yaml
src/: lib.rs  matrix.rs  types.rs  vec.rs  vector.rs
src/matrix/: m2x2.rs  m3x3.rs  m4x4.rs
